# advent-of-code

./: .gitignore  Cargo.toml
2021/: 1.py  10.py  12.1.py  12.2.py  2.py  3.py  4.py  5.py  6.py  7.py  8.py  9.py
2021/13/: main.go
2022/: 1.py  10.2.py  10.py  11.1.py  11.2.py  12.py  13.py  14.py  15.py  16.py  17.py  18.py  2.1.py  2.2.py  20.py  21.py  22.py  23.py  24.py  25.py  3.py  4.py  5.1.py  5.2.py  6.py  7.py  8.py  9.py
2022/19/: main.go
2023/1/: main.go
2023/10/: main.go
2023/11/: main.go
2023/13/: main.go
2023/14/: main.go
2023/2/: main.go
2023/3/: main.go
2023/4/: main.go
2023/5/: main.go
2023/6/: main.go
2023/7/: main.go
2023/8/: main.go
2023/9/: main.go
2024/1/: main.rs
2024/2/: main.rs
2024/3/: main.rs
2024/4/: main.rs
template/go/: main.go
util/: errors.go  number.go  types.go
utils/: errors.go  types.go
