bin = [
  { name = "2024-1", path = "2024/1/main.rs" },
  { name = "2024-2", path = "2024/2/main.rs" },
  { name = "2024-3", path = "2024/3/main.rs" },
]

[package]
name = "advent-of-code"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
regex = "1.11.1"

[lints.rust]
# You shouldn't write unsafe code in Rustlings!
unsafe_code = "forbid"
# You don't need unstable features in Rustlings and shouldn't rely on them while learning Rust.
unstable_features = "forbid"
# Dead code warnings can't be avoided in some exercises and might distract while learning.
dead_code = "allow"

[lints.clippy]
# You forgot a `todo!()`!
todo = "forbid"
# This can only happen by mistake in Rustlings.
empty_loop = "forbid"
# No infinite loops are needed in Rustlings.
infinite_loop = "deny"
# You shouldn't leak memory while still learning Rust!
mem_forget = "deny"
# Currently, there are no disallowed methods. This line avoids problems when developing Rustlings.
disallowed_methods = "allow"
